workspace-sf/force-app/main/default/objects/RespostaQuestionario__c/RespostaQuestionario__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre a pergunta e a resposta.</description>
    <label>Resposta do questionário</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Respostas do questionário</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>