workspace-sf/force-app/main/default/objects/RespostaQuestionario__c/fields/PerguntaQuestionario__c.field-meta.xml
<CustomField>
    <fullName>PerguntaQuestionario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pergunta do questionário</label>
    <referenceTo>PerguntaQuestionario__c</referenceTo>
    <relationshipLabel>Respostas do questionário</relationshipLabel>
    <relationshipName>RespostasQuestionario</relationshipName>
    <type>Lookup</type>
</CustomField>