workspace-sf/force-app/main/default/objects/RespostaQuestionario__c/fields/SeguradoProposta__c.field-meta.xml
<CustomField>
    <fullName>SeguradoProposta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segurado da proposta</label>
    <referenceTo>SeguradoProposta__c</referenceTo>
    <relationshipLabel>Respostas do questionário</relationshipLabel>
    <relationshipName>RespostasQuestionario</relationshipName>
    <type>Lookup</type>
</CustomField>